infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-blog-service
spec:
  selector:
    app: my-blog
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
