infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-blog-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: tripleonezero.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-blog-service
                port:
                  number: 80
